--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,9 @@ name = "pypi"
 [packages]
 line-bot-sdk = "1.14.0"
 flask = "1.0.2"
-python-dotenv = "==0.10.3"
-transitions = "==0.6.9"
-
+python-dotenv = "0.10.3"
+transitions = "0.6.9"
+pygraphviz = "1.5"
 [dev-packages]
 
 [requires]
