--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ python-dotenv = "0.10.3"
 transitions = "0.6.9"
 pygraphviz = "1.5"
 Pillow = "8.0.1"
+numpy = "1.17.4"
 [dev-packages]
 
 [requires]
