--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-line-bot-sdk==1.14.0
-flask==1.0.2
-python-dotenv==0.10.3
-transitions==0.6.9
-pygraphviz==1.5
-Pillow==8.0.1
-numpy==1.17.4
+line-bot-sdk
+flask
+python-dotenv
+transitions
+pygraphviz
+Pillow
+numpy
+requests
+requests_oauthlib
